<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.todo.app.ui.step4.Step4ViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_step4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/purple_200"
            app:contentInsetStart="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_gnb_back">

            <TextView
                android:id="@+id/tv_step4_title"
                style="@style/TextHeadLine20.White.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tb_step4_title" />
        </androidx.appcompat.widget.Toolbar>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_step4_list"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tb_step4"
            tools:listitem="@layout/item_todo" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:background="@color/white_a90"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_step4_toast"
                style="@style/TextTodoTitle.White.Bold"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_gradient_purple"
                android:onClick="@{() -> viewModel.showToast()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/btn_label_toast"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_step4_add"
                style="@style/TextTodoTitle.White.Bold"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_gradient_purple"
                android:onClick="@{() -> viewModel.openAddFragment()}"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:text="@string/btn_label_todo_add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>